# cookies_rs

./: Cargo.toml  README.md  Web.toml
res/: carrot.blend  carrot.mdl  carrot.tga  cliffbar.blend  cliffbar.mdl  cliffbar.tga  cookie.mdl  cookie.tga  crumb.blend  crumb.mdl  crumb.tga  girlduck.tga  grub.blend  grub.mdl  grub.tga  house_inside.blend  house_inside.mdl  house_inside.tga  instructions.tga  lose.tga  monkey.mdl  mouse.blend  mouse.mdl  mouse.tga  mushroom.mdl  mushroom.tga  pillduck.blend  pillduck.mdl  pillduck.tga  test.mdl  test.tga  title.tga  tree.blend  tree.mdl  unit_cube.mdl  unit_quad.mdl  unit_sphere.mdl  win.tga
res/glsl/: mesh.fs  mesh.vs  simple.fs  title.fs  title.vs
src/: carrot.rs  cliffbar.rs  collision.rs  cookie.rs  crumb.rs  draw_context.rs  entity.rs  girl.rs  grub.rs  main.rs  man.rs  mouse.rs  music.rs  title.rs
