[package]
name = "cookiesrs"
version = "0.1.0"
authors = ["Brandon Surmanski <b.surmanski@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.2.0"

# GL Library
#rockwork = { git = "https://github.com/bsurmanski/rockwork", tag = "ggj19" }
rockwork = { path = "../rockwork" }

# Rendering
gl = "0.11.0"

# Windowing
sdl2 = "0.32.1"

# Loading Images
image = {version = "0.21.0", default_features = false, features = ["png_codec", "tga"]}

# Vectors and Linear Algebra
nalgebra = "0.16"

rand = "0.7.0"
